--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "hubot-fliptable",
-  "description": "A hubot script to flip a table",
-  "version": "1.1.0",
-  "author": "JJ Asghar <jjasghar@gmail.com>",
+  "name": "hubot-chill-up",
+  "description": "A hubot script to put back flipped tables",
+  "version": "1.0.0",
+  "author": "Amer <hubot-chill-yo@amerdid.it>",
   "license": "MIT",
 
   "keywords": [
     "hubot",
-    "hubot-scripts"
+    "hubot-scripts",
+    "fliptable"
   ],
 
   "repository": {
     "type": "git",
-    "url": "git@github.com:hubot-scripts/hubot-fliptable.git"
+    "url": "git@github.com:amerdidit/hubot-chill-yo.git"
   },
 
   "bugs": {
-    "url": "https://github.com/hubot-scripts/hubot-fliptable/issues"
+    "url": "https://github.com/amerdid.it/hubot-chill-yo/issues"
   },
 
   "dependencies": {
