Correct name in package.json"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hubot-chill-up",
+  "name": "hubot-chill-yo",
   "description": "A hubot script to put back flipped tables",
   "version": "1.0.0",
   "author": "Amer <hubot-chill-yo@amerdid.it>",
